<resources>
    <string name="app_name">Intelligent Medicine Box</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Notifications</string>
    <string name="action_view_pres">View Prescription</string>
    <string name="action_view_log">View Notifications log</string>
    <string name="action_add_med">Add medicine</string>
    <string name="title_activity_view_prescription">ViewPrescription</string>
    <string name="title_activity_add_medicine">AddMedicine</string>
    <string name="channel_name">notifications_channel</string>
    <string name="channel_description">for realtime notifications</string>
    <string name="action_register">Register</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="action_submit">submit</string>
    <string name="select_account_text">Select account type</string>
    <string name="error_insecure_password">At least 8 characters, 1 capital, 1 small, 1 digit, 1 special character required in the password.</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="action_new_pres">Add new prescription</string>
    <string name="title_activity_add_prescription">AddPrescription</string>
    <string name="patient_name">Patient Name</string>
    <string name="med_name">Medicine name</string>
</resources>
