<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bits.se.hackstreetboys.intelligentmedbox.options">
    <item
        android:id="@+id/action_view_pre"
        android:orderInCategory="100"
        android:title="@string/action_view_pres"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_log"
        android:orderInCategory="200"
        android:title="@string/action_view_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_med"
        android:orderInCategory="300"
        android:title="@string/action_add_med"
        app:showAsAction="never" />
</menu>